fix text invisible on button (#126)

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -181,6 +181,7 @@ html {
     .button2 {
       @include standardTextGradient;
       border: solid 1px $Secondary02;
+      display: inline-block;
 
       &:hover {
         -webkit-text-fill-color: $Secondary04;
